manifests/dev/specter/Deployment-specter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: specter
    app.kubernetes.io/name: specter
  name: specter
  namespace: specter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: specter
      app.kubernetes.io/name: specter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: specter
        app.kubernetes.io/name: specter
    spec:
      containers:
        - args:
            - --host=0.0.0.0
          image: lncm/specter-desktop:v2.1.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
          name: specter-desktop
          ports:
            - containerPort: 25441
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /data
              name: specter-data
      securityContext:
        fsGroup: 1000
      serviceAccountName: specter
      volumes:
        - name: specter-data
          persistentVolumeClaim:
            claimName: specter-data
