manifests/dev/specter/Service-specter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: specter
    app.kubernetes.io/name: specter
  name: specter
  namespace: specter
spec:
  ports:
    - name: http
      port: 25441
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: specter
    app.kubernetes.io/name: specter
  type: ClusterIP
