manifests/dev/specter/Ingress-specter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: specter
    app.kubernetes.io/name: specter
  name: specter
  namespace: specter
spec:
  ingressClassName: tailscale
  rules:
    - host: specter.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: specter
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - specter.bearded-snake.ts.net
      secretName: specter-tls
